@@ -1,0 +1,6 @@
+GLIBC_PROVIDES dnl See aclocal.m4 in the top level source directory.
+# Local configure fragment for sysdeps/powerpc/powerpc64/fpu/.
+
+if test "$enable_mathvec" != "no" ; then
+  build_mathvec=yes
+fi
