@@ -1,0 +1,1 @@
+GLIBC_2.30 _ZGVbN2v_cos F
